--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello World</title>
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World1</h1>
 </body>
 <script src="/index.js"></script>
 </html>
